Dodano przycik dodawania alarmów w sekcji planera ćwiczeń oraz zmieniono zdjęcie śmietnika na działjący przycisk usuwania alarmu.

--- a/app/src/main/res/layout/activity_alarm.xml
+++ b/app/src/main/res/layout/activity_alarm.xml
@@ -4,16 +4,31 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#C5C5C5"
     tools:context=".Alarm_RecyclerView.Alarm_activity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/Alarms_recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="70dp"
         android:padding="4dp"
-        android:scrollbars="vertical"
-        android:background="@android:color/darker_gray"/>
+        android:scrollbars="vertical" />
 
+    <Button
+        android:id="@+id/button_add_alarm_item"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/button_round"
+        android:text="+"
+        android:textColor="#05C19C"
+        android:textSize="20sp"/>
 
 
 </RelativeLayout>
