--- a/app/src/main/res/layout/recycleview_item.xml
+++ b/app/src/main/res/layout/recycleview_item.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="4dp"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    app:cardCornerRadius="4dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,52 +15,54 @@
             android:id="@+id/text_hour"
             android:layout_width="wrap_content"
             android:layout_height="35dp"
-            android:text="8:00"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
             android:layout_alignParentTop="true"
-            android:layout_marginBottom="25dp"/>
+            android:layout_marginBottom="25dp"
+            android:text="8:00"
+            android:textColor="@android:color/black"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <ImageView
             android:id="@+id/icon_slider"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_switch_icon"
-            android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:layout_marginBottom="35dp"/>
+            android:layout_alignParentEnd="true"
+            android:layout_marginBottom="35dp"
+            android:src="@drawable/ic_switch_icon" />
 
         <TextView
             android:id="@+id/text_powtarzanie"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
-            android:text="Powtarzanie: "
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
             android:layout_below="@id/text_hour"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true"
+            android:text="Powtarzanie: "
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/text_days_of_week"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:text="Test"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/black"
             android:layout_below="@id/text_powtarzanie"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="10dp"/>
+            android:layout_marginStart="10dp"
+            android:text="Test"
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
+            android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/icon_trash_can"
+        <ImageButton
+            android:id="@+id/button_trash_can"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_trash_can_icon"
+            android:layout_below="@+id/icon_slider"
             android:layout_alignParentEnd="true"
-            android:layout_below="@+id/icon_slider"/>
+            android:background="#FFFFFF"
+            android:src="@drawable/ic_trash_can_icon"/>
+
 
 
     </RelativeLayout>
