--- a/app/src/main/res/layout/recycleview_item.xml
+++ b/app/src/main/res/layout/recycleview_item.xml
@@ -22,23 +22,15 @@
             android:textSize="30sp"
             android:textStyle="bold" />
 
-        <ToggleButton
-            android:button="@android:transition/slide_right"
+        <androidx.appcompat.widget.SwitchCompat
             android:id="@+id/icon_slider"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="35dp" />
-
-<!--        <ImageView
-            android:id="@+id/icon_slider"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="35dp"
-            android:src="@drawable/ic_switch_icon" />-->
+            android:thumb="@drawable/thumb"
+            app:track="@drawable/track"/>
 
         <TextView
             android:id="@+id/text_powtarzanie"
@@ -70,8 +62,7 @@
             android:layout_below="@+id/icon_slider"
             android:layout_alignParentEnd="true"
             android:background="#FFFFFF"
-            android:src="@drawable/ic_trash_can_icon"/>
-
+            android:src="@drawable/ic_trash_can_icon" />
 
 
     </RelativeLayout>
