kolory, cwiczenia, bmi

--- a/app/src/main/res/layout/activity_brzuch_poz.xml
+++ b/app/src/main/res/layout/activity_brzuch_poz.xml
@@ -12,6 +12,7 @@
         android:layout_height="76dp"
         android:background="@drawable/mybutton1"
         android:text="Mięśnie Brzucha \n Zaawansowany"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +25,7 @@
         android:layout_height="76dp"
         android:background="@drawable/mybutton1"
         android:text="Mięśnie Brzucha \n Średnio Zaawansowany"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -36,6 +38,7 @@
         android:layout_height="76dp"
         android:background="@drawable/mybutton1"
         android:text="Mięśnie Brzucha \n Początkujący"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
