--- a/app/src/main/res/drawable/mybutton1.xml
+++ b/app/src/main/res/drawable/mybutton1.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
     <!-- you can use any color you want I used here gray color-->
-    <solid android:color="#ABABAB"/>
+    <solid android:color="#620587"/>
+    android:textColor="#ffffff"
     <corners android:radius="10dp"/>
 </shape>
