--- a/app/src/main/res/layout/activity_plecy_poz.xml
+++ b/app/src/main/res/layout/activity_plecy_poz.xml
@@ -15,6 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:textColor="#ffffff"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.684" />
 
@@ -25,6 +26,7 @@
         android:background="@drawable/mybutton1"
         android:text="Barki i Plecy\n Średnio Zaawansowany"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="#ffffff"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -36,6 +38,7 @@
         android:layout_height="76dp"
         android:background="@drawable/mybutton1"
         android:text="Barki i Plecy \n Początkujący"
+        android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
