--- a/app/src/main/res/layout/activity_alarm_add.xml
+++ b/app/src/main/res/layout/activity_alarm_add.xml
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Wybiersz godzine"
+        android:text="Wybierz godzine"
+        android:textColor="#ffffff"
+        android:background="@drawable/mybutton1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_godzina" />
@@ -99,6 +101,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="Ustaw"
+        android:textColor="#ffffff"
+        android:background="@drawable/mybutton1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
