--- a/app/src/main/res/layout/activity_alarm_add.xml
+++ b/app/src/main/res/layout/activity_alarm_add.xml
@@ -8,13 +8,13 @@
 
     <Button
         android:id="@+id/button_chose_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="135dp"
+        android:layout_height="49dp"
         android:layout_marginTop="44dp"
+        android:background="@drawable/mybutton1"
         android:fontFamily="sans-serif-medium"
         android:text="Wybierz godzine"
         android:textColor="#ffffff"
-        android:background="@drawable/mybutton1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_godzina" />
